[tool.poetry]
name = "repo-watcher-dispatch-sender"
version = "1.0.0"
description = "A repo-watcher to watch for commits on a repo an trigger GitHub action by sending a repository_dispatch event to destinantion repo"
authors = ["Divanshu Chauhan <23524935+Divkix@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.0"
pickledb-ujson = "^1.0.3"
prettyconf = "^2.2.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
